--- a/frontend/src/Styles/explore.css
+++ b/frontend/src/Styles/explore.css
@@ -122,6 +122,7 @@
   outline: none;
   background-color: transparent;
   color: var(--text-primary);
+  width: 2rem;
   transition: color 0.2s;
 }
 
