--- a/frontend/src/Styles/footer.css
+++ b/frontend/src/Styles/footer.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  font-family: var(--font-subheading);
 }
 
 .footer-section {
